aws_security_group.rule.artifactory.tf
resource "aws_security_group_rule" "fromelb" {
  # checkov:skip=CKV_AWS_382: Unrestricted outbound access required for resource functionality
  description              = "from elb"
  from_port                = 8081
  ipv6_cidr_blocks         = []
  prefix_list_ids          = []
  protocol                 = "tcp"
  source_security_group_id = aws_security_group.elb.id
  to_port                  = 8082
  security_group_id        = var.instance_sg
  type                     = "ingress"
}

resource "aws_security_group_rule" "cidr" {
  # checkov:skip=CKV_AWS_382: Unrestricted outbound access required for resource functionality
  cidr_blocks       = var.allowed_cidr
  description       = "from internet"
  from_port         = 8081
  prefix_list_ids   = []
  protocol          = "tcp"
  to_port           = 8082
  security_group_id = var.instance_sg
  type              = "ingress"
}
